unpackaged/main/default/objects/Contact/fields/FS_Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>FS_Primary_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>