unpackaged/main/default/objects/Contact/fields/FS_Primary_Affiliation_Record__c.field-meta.xml
<CustomField>
    <fullName>FS_Primary_Affiliation_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated to link to the active Affiliation Record that is marked as Primary</description>
    <inlineHelpText>This field is automatically populated to link to the active Affiliation Record that is marked as Primary</inlineHelpText>
    <label>Primary Affiliation Record</label>
    <referenceTo>FS_Affiliation__c</referenceTo>
    <relationshipLabel>Contacts (Primary Affiliation Record)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>