unpackaged/main/default/objects/Contact/fields/FS_Primary_Practice_Setting_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Primary_Practice_Setting_Role__c</fullName>
    <label>Primary Practice Setting Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Primary_Practice_Setting_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff Attorney</fullName>
            </value>
            <value>
                <fullName>Public Defender</fullName>
            </value>
            <value>
                <fullName>District Attorney/Prosecutor</fullName>
            </value>
            <value>
                <fullName>Administrator/Administrative Staff</fullName>
            </value>
            <value>
                <fullName>Attorney General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>City Corporation Counsel</fullName>
            </value>
            <value>
                <fullName>In-House Counsel</fullName>
            </value>
            <value>
                <fullName>General Counsel</fullName>
            </value>
            <value>
                <fullName>Chief Legal Officer</fullName>
            </value>
            <value>
                <fullName>Financial Officer</fullName>
            </value>
            <value>
                <fullName>President/CEO</fullName>
            </value>
            <value>
                <fullName>Reporter</fullName>
            </value>
            <value>
                <fullName>Lobbyist</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Court Attorney</fullName>
            </value>
            <value>
                <fullName>Administrative Law Judge/Hearing Officer</fullName>
            </value>
            <value>
                <fullName>Law Clerk</fullName>
            </value>
            <value>
                <fullName>Partner/Shareholder</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Senior Associate</fullName>
            </value>
            <value>
                <fullName>Of Counsel</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
            <value>
                <fullName>Solo Practitioner</fullName>
            </value>
            <value>
                <fullName>Pro Bono Services Administrator</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Law Librarian</fullName>
            </value>
            <value>
                <fullName>Independent Contractor</fullName>
            </value>
            <value>
                <fullName>Diversity Coordinator</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>