unpackaged/main/default/objects/Contact/fields/FS_Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>FS_Profile_Picture_URL__c</fullName>
    <inlineHelpText>profile picture of the contact</inlineHelpText>
    <label>Profile Picture URL</label>
    <type>Url</type>
</CustomField>