unpackaged/main/default/objects/Contact/fields/FS_Public_Official__c.field-meta.xml
<CustomField>
    <fullName>FS_Public_Official__c</fullName>
    <description>Do you qualify as a public official? NYSBA is registered with the NYS Joint Commission on Public Ethics pursuant to the Lobbying Act to engage in lobbying activities. Consequently, public officials cannot accept certain benefits from the Association. Further information can be obtained by contacting an official's agency ethics officer or the Association at (518) 463-3200.</description>
    <inlineHelpText>Do you receive a New York State or local governmental pay check or hold an appointment from a New York State or local governmental official?</inlineHelpText>
    <label>Are you a Public Official?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>