unpackaged/main/default/objects/Contact/fields/FS_Public_Official_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Public_Official_Confirmation_Status__c</fullName>
    <inlineHelpText>Public Official (Staff/System) status confirmation</inlineHelpText>
    <label>Public Official Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (confirmed)</fullName>
            </value>
            <value>
                <fullName>No (confirmed)</fullName>
            </value>
            <value>
                <fullName>Caution (system flag)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>