unpackaged/main/default/objects/Contact/fields/FS_Publications_Books_Forms_Updates__c.field-meta.xml
<CustomField>
    <fullName>FS_Publications_Books_Forms_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages related to NYSBA books, forms, or other publications</inlineHelpText>
    <label>Publications/Books/Forms Advertisement</label>
    <type>Checkbox</type>
</CustomField>