unpackaged/main/default/objects/Contact/fields/FS_PublicationsBooksFormsAdvertisement__c.field-meta.xml
<CustomField>
    <fullName>FS_PublicationsBooksFormsAdvertisement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publications,Books &amp; Forms Advertisement</label>
    <type>Checkbox</type>
</CustomField>