unpackaged/main/default/objects/Contact/fields/FS_RaceEthnicity__c.field-meta.xml
<CustomField>
    <fullName>FS_RaceEthnicity__c</fullName>
    <inlineHelpText>Select all that apply</inlineHelpText>
    <label>Race/Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asian/Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Black/African American</fullName>
            </value>
            <value>
                <fullName>Hispanic/Latinx</fullName>
            </value>
            <value>
                <fullName>Native American</fullName>
            </value>
            <value>
                <fullName>White/Caucasian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
            <value>
                <fullName>Multiple Race/Ethnic Group</fullName>
                <isActive>false</isActive>
                <label>Multiple Race/Ethnic Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>