unpackaged/main/default/objects/Contact/fields/FS_Sales_Email_One_to_One__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Email_One_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Individual staff follow-up from HubSpot</inlineHelpText>
    <label>Sales Email - One to One</label>
    <type>Checkbox</type>
</CustomField>