unpackaged/main/default/objects/Contact/fields/FS_Section_Member_Notice__c.field-meta.xml
<CustomField>
    <fullName>FS_Section_Member_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages related to NYSBA Sections</inlineHelpText>
    <label>Section Notices</label>
    <type>Checkbox</type>
</CustomField>