unpackaged/main/default/objects/Contact/fields/FS_Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>FS_Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heterosexual</fullName>
            </value>
            <value>
                <fullName>Lesbian/Gay/Bisexual/Queer/Asexual</fullName>
            </value>
            <value>
                <fullName>Decline to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>