unpackaged/main/default/objects/Contact/fields/FS_Source__c.field-meta.xml
<CustomField>
    <fullName>FS_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscribe Form</fullName>
            </value>
            <value>
                <fullName>New User Registration</fullName>
                <default>true</default>
                <label>New User Registration</label>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>OCA Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>