unpackaged/main/default/objects/Contact/fields/FS_State_Admitted__c.field-meta.xml
<CustomField>
    <fullName>FS_State_Admitted__c</fullName>
    <description>The State you where first admitted, in any jurisdiction</description>
    <inlineHelpText>The State you where first admitted, in any jurisdiction</inlineHelpText>
    <label>State Admitted</label>
    <length>40</length>
    <type>Text</type>
</CustomField>