unpackaged/main/default/objects/Contact/fields/FS_Student_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Email__c</fullName>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>