unpackaged/main/default/objects/Contact/fields/FS_Student_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Category of bulk email messages aimed at law students</inlineHelpText>
    <label>Student eNewsletter</label>
    <type>Checkbox</type>
</CustomField>