unpackaged/main/default/objects/Contact/fields/FS_Sustaining_Member__c.field-meta.xml
<CustomField>
    <fullName>FS_Sustaining_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if the contact would like to upgrade to a sustaining member. Note that they will only be given the $400 dues rate if this checkbox is checked.</inlineHelpText>
    <label>Sustaining Member</label>
    <type>Checkbox</type>
</CustomField>