unpackaged/main/default/objects/Contact/fields/FS_Tax_Exempt_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Tax_Exempt_Number__c</fullName>
    <inlineHelpText>Only MRC can edit</inlineHelpText>
    <label>Tax Exempt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>