unpackaged/main/default/objects/Contact/fields/FS_The_New_York_Bar_Foundation_Notice__c.field-meta.xml
<CustomField>
    <fullName>FS_The_New_York_Bar_Foundation_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bulk email messages from The New York Bar Foundation</inlineHelpText>
    <label>New York Bar Foundation Emails</label>
    <type>Checkbox</type>
</CustomField>