unpackaged/main/default/objects/Contact/fields/FS_Twitter__c.field-meta.xml
<CustomField>
    <fullName>FS_Twitter__c</fullName>
    <label>Twitter</label>
    <type>TextArea</type>
</CustomField>