unpackaged/main/default/objects/Contact/fields/FS_UndeliverablePreferredMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>FS_UndeliverablePreferredMailingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marked manually by staff when mail is returned, or when address is otherwise noted to be invalid.</inlineHelpText>
    <label>Undeliverable Preferred Mailing Address</label>
    <type>Checkbox</type>
</CustomField>