unpackaged/main/default/objects/Contact/fields/FS_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Verification_Method__c</fullName>
    <label>Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCA download match</fullName>
            </value>
            <value>
                <fullName>OCA online</fullName>
            </value>
            <value>
                <fullName>OCA department where admitted</fullName>
            </value>
            <value>
                <fullName>Confirmed with other state</fullName>
            </value>
            <value>
                <fullName>Confirmed with other country</fullName>
            </value>
            <value>
                <fullName>Admission verification received from applicant</fullName>
            </value>
            <value>
                <fullName>OCA Download</fullName>
                <isActive>false</isActive>
                <label>OCA Download</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>