unpackaged/main/default/objects/Contact/fields/FS_Years_Since_Admitted_to_Bar__c.field-meta.xml
<CustomField>
    <fullName>FS_Years_Since_Admitted_to_Bar__c</fullName>
    <formula>IF(NOT( ISBLANK( FS_First_Admit_Date__c ) ),YEAR (Today()) - YEAR ( FS_First_Admit_Date__c ), null)</formula>
    <label>Years Since Admitted to Bar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>