unpackaged/main/default/objects/Contact/fields/HL_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>HL_Mod_Date__c</fullName>
    <description>Used for the Higher Logic Integration. Updates from the Higher Logic workflow rules and is read by HL periodic refresh to know when a record has been updated.</description>
    <inlineHelpText>Used for the Higher Logic Integration.</inlineHelpText>
    <label>HL_Mod_Date</label>
    <type>DateTime</type>
</CustomField>