unpackaged/main/default/objects/Contact/fields/HL_SF_CaseSafe_ID__c.field-meta.xml
<CustomField>
    <fullName>HL_SF_CaseSafe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL SF CaseSafe ID</label>
    <type>Text</type>
</CustomField>