unpackaged/main/default/objects/Contact/fields/HOD_JD_Override__c.field-meta.xml
<CustomField>
    <fullName>HOD_JD_Override__c</fullName>
    <description>Field used to manually set the HOD JD value for reporting purposes.</description>
    <inlineHelpText>Field used to manually set the HOD JD value for reporting purposes.</inlineHelpText>
    <label>HOD JD Override</label>
    <length>30</length>
    <type>Text</type>
</CustomField>