unpackaged/main/default/objects/Contact/fields/Last_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Error_Message__c</fullName>
    <description>Error Message returned by the API in case of failure</description>
    <label>Last Sync Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>