unpackaged/main/default/objects/Contact/fields/Local_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Local_Chapter__c</fullName>
    <label>Local Chapter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Fort Worth</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Detroit</fullName>
            </value>
            <value>
                <fullName>El Paso</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Memphis</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Nashville-Davidson</fullName>
            </value>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Oklahoma City</fullName>
            </value>
            <value>
                <fullName>Portland</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Louisville-Jefferson County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>