unpackaged/main/default/objects/Contact/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>Netsuite ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>