unpackaged/main/default/objects/Contact/fields/No_CLE_Mail__c.field-meta.xml
<CustomField>
    <fullName>No_CLE_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No CLE Mail</label>
    <type>Checkbox</type>
</CustomField>